--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -19,6 +20,8 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.11",
+    "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
