--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "firebase": "^8.3.0",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
