--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "homepage": "https://ccallen001.github.io/chase-allen/",
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,26 +13,30 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "autoprefixer": "^9.8.6",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
+    "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "sass-loader": "^10.1.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@craco/craco": "^6.1.1",
     "@reduxjs/toolkit": "^1.5.0",
     "firebase": "^8.3.0",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "craco build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "start": "craco start",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
